Modify EC2 deployment steps in workflow
Updated deployment workflow to use SSH for cloning.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,20 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Copy files to EC2
+      - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
-            cd ~/techx || git clone https://github.com/YOUR_GITHUB_USERNAME/techx.git
-            cd techx
+            # If folder doesn't exist, clone using SSH
+            if [ ! -d "~/techx" ]; then
+              git clone git@github.com:${{ github.repository }}.git techx
+            fi
+
+            cd ~/techx
             git pull origin master
-            docker stop techx || true
-            docker rm techx || true
-            docker build -t techx .
-            docker run -d -p 80:80 --name techx techx
+
+            # Build and deploy container
+            sudo docker stop techx || true
+            sudo docker rm techx || true
+            sudo docker build -t techx .
+            sudo docker run -d -p 80:80 --name techx techx
           EOF
